Fixed FAQ section left padding to match the other section left spacing.

--- a/zenctuary-theme-starter/assets/css/components.css
+++ b/zenctuary-theme-starter/assets/css/components.css
@@ -832,7 +832,7 @@ input[type="checkbox"] {
 
 .zen-faq-section .wp-block-group.is-layout-flow:not(.zen-overlap-right):not(.zen-faq-group) {
   padding-right: 15%;
-  padding-left: 15%;
+  padding-left: 10%;
   padding-top: 25%;
   padding-bottom: 25%;
 }
